# MedAID-ML

./: .gitignore  README.md  pyproject.toml
results/: token_attributions.csv
results/baseline/1/: results_no_dataleak.csv  results_test.csv
results/baseline/2/: results_no_dataleak.csv  results_test.csv
results/baseline/3/: results_no_dataleak.csv  results_test.csv
results/baseline/4/: results_no_dataleak.csv  results_test.csv
results/baseline/5/: results_no_dataleak.csv  results_test.csv
results/bert-base-multilingual-cased/1/: results_test.csv
results/bert-base-multilingual-cased/2/: results_test.csv
results/bert-base-multilingual-cased/3/: results_test.csv
results/bert-base-multilingual-cased/4/: results_test.csv
results/bert-base-multilingual-cased/5/: results_test.csv
results/fast_detect_gpt/1/: results_test.csv
results/fast_detect_gpt/2/: results_test.csv
results/fast_detect_gpt/3/: results_test.csv
results/fast_detect_gpt/4/: results_no_dataleak.csv  results_test.csv
results/fast_detect_gpt/5/: results_test.csv
results/gpt2/1/: results_no_dataleak.csv
results/gpt2/2/: results_no_dataleak.csv
results/gpt2/3/: results_no_dataleak.csv
results/gpt2/4/: results_no_dataleak.csv
results/gpt2/5/: results_no_dataleak.csv
results/mdeberta-v3-base/1/: results_test.csv
results/mdeberta-v3-base/2/: results_test.csv
results/mdeberta-v3-base/3/: results_test.csv
results/mdeberta-v3-base/4/: results_test.csv
results/mdeberta-v3-base/5/: results_test.csv
results/medical_mT5/1/: results_test.csv
src/medaidml/: __init__.py
(+22 files in other folders)
